--- a/charta.cabal
+++ b/charta.cabal
@@ -1,4 +1,4 @@
-cabal-version:   3.16
+cabal-version:   3.14
 name:            charta
 version:         0.1.0.0
 license:         NONE
@@ -19,5 +19,6 @@ executable charta
     hs-source-dirs:   app
     other-modules:    Parser,
                       Traverser,
-                      IRPasses
+                      IRPasses,
+                      Interpreter
     default-language: Haskell2010
