Experimental -- Unicode based corelib.
Requires a good monospace font to be legible.
Iosevka Mono is preferred.

--- a/charta.cabal
+++ b/charta.cabal
@@ -20,5 +20,6 @@ executable charta
     other-modules:    Parser,
                       Traverser,
                       IRPasses,
-                      Interpreter
+                      Interpreter,
+                      Core
     default-language: Haskell2010
