--- a/charta.cabal
+++ b/charta.cabal
@@ -26,6 +26,7 @@ executable charta
                       IRPasses,
                       Interpreter,
                       Core,
+                      ProgramBuilder,
                       StdLib,
                       StdLib.IO
     default-language: Haskell2010
